# CG_2022

./: .gitignore  README.md
OpenGL_1/Code/: CMakeLists.txt  mainview.cpp  mainview.h
Plamadeala_OpenGL_1/Code/: vertex.cpp
Plamadeala_OpenGL_2/: README
Plamadeala_OpenGL_2/Code/: CMakeLists.txt  main.cpp  mainview.cpp  mainview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  resources.qrc  user_input.cpp  vertex.h
Plamadeala_OpenGL_2/Code/shaders/: gouraud_fragshader.glsl  gouraud_vertshader.glsl  normal_fragshader.glsl  phong_fragshader.glsl  phong_vertshader.glsl  zbuffer_vertshader.glsl
Plamadeala_OpenGL_3/Animation/Code/: CMakeLists.txt
Plamadeala_OpenGL_3/Wave/Code/: CMakeLists.txt
Plamadeala_Raytracing_1/Code/: hit.h  image.cpp  light.h  main.cpp  material.h  object.h  objloader.cpp  objloader.h  ray.h  raytracer.cpp  raytracer.h  scene.cpp  triple.h  vertex.h
Plamadeala_Raytracing_1/Code/shapes/: mesh.cpp  mesh.h  quad.cpp  quad.h  sphere.cpp  triangle.cpp  triangle.h
Plamadeala_Raytracing_1/Scenes/6_mesh/: 2.json
Plamadeala_Raytracing_2/src/: scene.cpp
Plamadeala_Raytracing_2/src/shapes/: sphere.cpp
Plamadeala_Savin_OpenGL_1/: README
Plamadeala_Savin_OpenGL_1/Code/: model.cpp  vertex.h
Plamadeala_Savin_OpenGL_2/Code/: CMakeLists.txt  mainview.cpp  mainwindow.ui
Plamadeala_Savin_OpenGL_2/Code/shaders/: normal_fragshader.glsl  normal_vertshader.glsl  phong_fragshader.glsl  zbuffer_fragshader.glsl
Plamadeala_Savin_Raytracing_1/Code/: image.h  scene.h  triple.cpp
Plamadeala_Savin_Raytracing_1/Code/lode/: lodepng.cpp  lodepng.h
Plamadeala_Savin_Raytracing_1/Code/shapes/: cylinder.cpp  cylinder.h  quad.cpp  quad.h  sphere.h  triangle.cpp
Plamadeala_Savin_Raytracing_1/Scenes/6_mesh/: 1.json
Plamadeala_Savin_Raytracing_2/src/: scene.cpp
Plamadeala_Savin_Raytracing_2/src/shapes/: sphere.cpp
